src/objects/Trigger_Execute_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Before Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Execute__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Execute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trigger Execute Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Execute Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Execute Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>